# parallel-redis-celery

./: .gitignore  app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start_celery.py
